fixed header nav jumps

--- a/_components/CategoryDropdown/_styles.sass
+++ b/_components/CategoryDropdown/_styles.sass
@@ -110,7 +110,6 @@ $transition_time: 300ms
 
 .CategoryDropdown-Item.current
   .CategoryDropdown-ItemWrapper
-    padding-right: .75em
     opacity: 1
   .CategoryDropdown-ItemArrow
     opacity: 1
